@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Update reST stylesheets (Issue #3657)
 * Add a ``--timeout`` parameter to the ``check`` plugin, defaulting to
   30s. (Issue #3643)
 * GZIP compression is now deterministic for automatic deploys (Issue #3650)
@@ -12,6 +13,8 @@ Bug Fixes
 ---------
 
 * `GZIP_COMMAND` parsing on `win32` platforms (Issue#3649)
+* Fix ``:align: center`` for images in reST (Issue #3657)
+* ``GZIP_COMMAND`` parsing on ``win32`` platforms (Issue #3649)
 
 New in v8.2.3
 =============
